# sciencedates

./: .appveyor.yml  .gitignore  .mypy.ini  .travis.yml  README.md  README.rst  date2doy.jl  date2doy.m  date2doy.py  findnearest.py  pyproject.toml  randomdate.jl  randomdate.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
archive/: .appveyor.yml  .travis.yml
fortran/: doy.f90
julia/: randomdate.jl
sciencedates/: __init__.py  dec.py  doy.py  findnearest.py  random.py  ticks.py  tz.py
sciencedates/tests/: test_conv.py  test_msis.py  test_time.py
src/sciencedates/: dec.py  doy.py  findnearest.py  random.py  ticks.py  tz.py
src/sciencedates/tests/: test_conv.py  test_msis.py  test_time.py
tests/: test.py  test_all.py  test_conv.py  test_msis.py  test_time.py
