[metadata]
name = sciencedates
version = 1.5.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
url = https://github.com/geospace-code/sciencedates
description = Date conversions used in the sciences.
keywords =
  time
  calendar
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Utilities
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.5
packages = find:
scripts =
  date2doy.py
  findnearest.py
  randomdate.py
install_requires =
  numpy
  python-dateutil

[options.extras_require]
tests =
  pytest
lint =
  flake8
  mypy
plot =
  xarray
  matplotlib
timezone =
  pytz
